[package]
name = "mqtt-port"
version = "0.2.0"
authors = ["youngday"]
edition = "2021"

[dependencies]
log = "0.4"
log4rs = {version="1.0",features = ["toml","json_encoder"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
#serde_json= "1.0"
async-std = { version = "1.10", features = ["attributes"] }
paho-mqtt = "0.9"
#substring= "1.4"
serialport = "4.0.1"  


